backend/api/tests/integration/jig/snapshots/integration__jig__codes__create-1.snap
---
source: tests/integration/jig/codes.rs
expression: body
---
{
  "index": "[index]",
  "jig_id": "3a71522a-cd77-11eb-8dc1-af3e35f7c743",
  "name": null,
  "settings": {
    "direction": "rtl",
    "displayScore": false,
    "trackAssessments": false,
    "dragAssist": false
  },
  "expires_at": "[timestamp]"
}
