backend/api/tests/integration/jig/snapshots/integration__jig__codes__session_instance_play_count_flow-1.snap
---
source: tests/integration/jig/codes.rs
expression: body
---
{
  "jigId": "0cc084bc-7c83-11eb-9f77-e3218dffb008",
  "settings": {
    "direction": "ltr",
    "displayScore": true,
    "trackAssessments": true,
    "dragAssist": true
  },
  "token": "[instance_token]"
}
